[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "document360-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Document360 - search, retrieve, and interact with your knowledge base articles, categories, and project versions through AI assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dario Ruellan", email = "druellan@ecimtech.com"}
]
keywords = ["mcp", "document360", "knowledge-base", "api", "fastmcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/druellan/document360-mcp"
Issues = "https://github.com/druellan/document360-mcp/issues"

[tool.setuptools]
py-modules = ["server"]
